# Fragola

./: .gitignore  README.md  bun.lockb  package.json  svelte.config.js
.svelte-kit/: ambient.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Icon.icns
src-tauri/src/: main.rs
src/lib/: config.js
src/lib/components/: NowPlaying.svelte  TabComponent.svelte
src/lib/components/BottomBar/: AdditionalControls.svelte  NowPlayingData.svelte  PlaybackControls.svelte  ProgressBar.svelte
src/lib/components/TabSystem/: SystemControls.svelte
src/lib/pages/: Crash.svelte  Home.svelte  Library.svelte
src/routes/: +layout.svelte  +layout.ts  global.css
